--- a/luci-app-timecontrol/luasrc/view/timecontrol/index.htm
+++ b/luci-app-timecontrol/luasrc/view/timecontrol/index.htm
@@ -1,12 +1,24 @@
-<% include("cbi/map") %>
-<script type="text/javascript">//<![CDATA[
-	XHR.poll(2, '<%=luci.dispatcher.build_url("admin", "services", "timecontrol", "status")%>', null,
-		function (x, result) {
-			var status = document.getElementsByClassName('timecontrol_status')[0];
-			status.setAttribute("style", "font-weight:bold;");
-			status.setAttribute("color", result.status ? "green" : "red");
-			status.innerHTML = result.status ? '<%=translate("Running")%>' : '<%=translate("Not Running")%>';
+<%+header%>
+<div class="cbi-section">
+	<div class="cbi-section-node">
+		<div class="cbi-value">
+			<label class="cbi-value-title"><%:Status%>:</label>
+			<div class="cbi-value-field">
+				<span id="service-status" style="font-weight:bold;"><%:Collecting data...%></span>
+			</div>
+		</div>
+	</div>
+</div>
+<%- include("cbi/map") -%>
+<script type="text/javascript">
+	XHR.poll(3, '<%=url("admin/services/timecontrol/status")%>', null,
+		function(x, result) {
+			var status = document.getElementById('service-status');
+			if (status && result) {
+				status.style.color = result.status ? 'green' : 'red';
+				status.innerHTML = result.status ? '<%:Running%>' : '<%:Not Running%>';
+			}
 		}
-	)
-//]]>
+	);
 </script>
+<%+footer%>
