--- a/luci-app-timecontrol/luasrc/view/timecontrol/timecontrol.htm
+++ b/luci-app-timecontrol/luasrc/view/timecontrol/timecontrol.htm
@@ -1,3 +1,14 @@
 <%+cbi/valueheader%>
-<font class="timecontrol_status"><%=pcdata(self:cfgvalue(section) or self.default or "")%></font>
+<span id="timecontrol-status" style="font-weight:bold;"><%:Collecting data...%></span>
+<script type="text/javascript">
+	XHR.poll(3, '<%=url("admin/services/timecontrol/status")%>', null,
+		function(x, result) {
+			var status = document.getElementById('timecontrol-status');
+			if (status && result) {
+				status.style.color = result.status ? 'green' : 'red';
+				status.innerHTML = result.status ? '<%:Running%>' : '<%:Not Running%>';
+			}
+		}
+	);
+</script>
 <%+cbi/valuefooter%>
